change navbar headline with 'Leading changes' and fix according overlapping issue on small screans

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,3 +22,9 @@
   margin-right: auto;
   margin-left: auto;
 }
+
+/** Bootstrap overwrites **/
+
+.site-navbar .site-logo {
+  line-height: 0.6; /* fix overlapping words issue on smartphones */
+}
